Fix styles for modal on mobile

--- a/client/styles/_modal.scss
+++ b/client/styles/_modal.scss
@@ -28,3 +28,9 @@ $light-grey: $grey2;
     }
   }
 }
+@media only screen and (max-width: 768px) {
+  .modal-overlay .modal {
+    width: 80%;
+    height: 50%;
+  }
+}
